# pcg-cpp

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CREDITS.md  README.md
.github/workflows/: ci.yml
cmake/: pcg-cppConfig.cmake.in
include/: pcg_extras.hpp  pcg_random.hpp
sample/: CMakeLists.txt  basic_usage.cpp  cppref-sample.cpp  pcg-demo.cpp  spew.cpp  use-partytrick.cpp
test-high/: CMakeLists.txt  run-tests.sh
